--- a/helplineStyles.css
+++ b/helplineStyles.css
@@ -11,7 +11,9 @@ body {
     background-color: rgb(222, 213, 213);
 
   }
-  
+  .navi {
+  z-index: 9999;
+}
   header {
     background-color: #82A3AC;
     color: #1f1f1f;
