--- a/mood.css
+++ b/mood.css
@@ -9,6 +9,9 @@ body{
         background-repeat: no-repeat;
       
 }
+.navi {
+  z-index: 9999;
+}
 .below{
     padding-left: 20px;
     padding-right: 20px;
